More minor fixes: Changed color scheme, fixed an issue where the y axis label of the linechart was being covered by the axis line.

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ html {
 
 .uppermenu
 {
-    background-color:silver;
+    background-color: rgb(72, 146, 102);
     height:30px;
     width:100%;
     position:absolute;
@@ -143,7 +143,7 @@ html {
         height: 60px;
         width: 240px;
         float:right;
-        background-color: Silver;
+        background-color: rgb(94, 161, 182);
         border:1px solid;
         border-top-right-radius: 15px 15px;
         border-bottom-right-radius: 15px 15px;
@@ -186,7 +186,7 @@ body
 .line 
 {
   fill: none;
-  stroke: steelblue;
+  stroke: #FF7519;
   stroke-width: 1.5px;
 }
 
